# hestia-simulation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
scripts/: run_add.py  run_greet.py
src/hestia_simulation/: __init__.py
src/hestia_simulation/core/: __init__.py  add.py  sum.py
src/hestia_simulation/module1/: __init__.py
tests/: test_core.py
